--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<script src="adSense.js"></script>
 <!DOCTYPE html><script src="patch/js/gamesnacks-developer-v1.js" data-lift-storage data-user-activity-metrics nonce="RShP2AXpA6apfocOWw3f9g"></script><meta name="robots" content="noindex, nofollow">
     <meta charset="utf-8" />
     <title>2048 Fusion Unblocked - Unblocked Games 66</title>
